tests/ui/error-codes/E0604.stderr
error[E0604]: only `u8` can be cast as `char`, not `u32`
  --> $DIR/E0604.rs:2:5
   |
LL |     1u32 as char;
   |     ^^^^^^^^^^^^ invalid cast
   |
help: consider using `char::from_u32` instead
   |
LL -     1u32 as char;
LL +     char::from_u32(1u32);
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0604`.
