tests/ui/error-codes/E0604.rs
fn main() {
    1u32 as char; //~ ERROR E0604
}
